#Created seperate areas for admin for differentiation

--- a/Task1LoginRegister/Areas/Admin/Views/Home/Delete.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Home/Delete.cshtml
@@ -47,6 +47,10 @@
                         <td><strong>@Html.DisplayNameFor(model => model.Gender)</strong></td>
                         <td>@Html.DisplayFor(model => model.Gender)</td>
                     </tr>
+                        <tr>
+                            <td><strong>@Html.DisplayNameFor(model => model.Role)</strong></td>
+                            <td>@Html.DisplayFor(model => model.Role)</td>
+                        </tr>
                     <tr>
                         <td><strong>@Html.DisplayNameFor(model => model.Password)</strong></td>
                         <td>@Html.DisplayFor(model => model.Password)</td>
