--- a/Task1LoginRegister/Views/Shared/_ProductPartialView.cshtml
+++ b/Task1LoginRegister/Views/Shared/_ProductPartialView.cshtml
@@ -42,7 +42,7 @@
                 <span class="text-muted text-decoration-line-through">@Model.Price.ToString("C")</span>
              
             </div>
-            <a href="/User/Details/@Model.ProductId" class="btn btn-outline-primary detail w-100 mt-auto">View Details</a>
+            <a href="/Home/Details/@Model.ProductId" class="btn btn-outline-primary detail w-100 mt-auto">View Details</a>
         </div>
     </div>
 </div>
