--- a/Task1LoginRegister/Areas/Admin/Views/Home/Edit.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Home/Edit.cshtml
@@ -167,6 +167,15 @@
                     <span asp-validation-for="Gender" class="text-danger"></span>
                 </div>
 
+                <div class="form-group">
+                    <label asp-for="Role" class="form-label fw-bold">Role</label>
+                    <select asp-for="Role" class="form-control">
+                        <option value="User">User</option>
+                        <option value="Admin">Admin</option>
+                    </select>
+                    <span asp-validation-for="Role" class="text-danger"></span>
+                </div>
+
                 <!-- Password -->
                 <div class="form-group">
                     <label asp-for="Password" class="form-label fw-bold">Password</label>
