--- a/Task1LoginRegister/Views/Home/Details.cshtml
+++ b/Task1LoginRegister/Views/Home/Details.cshtml
@@ -239,7 +239,7 @@
                             </button>
                         </div>
                         <div>
-                            <button asp-action="Order" asp-controller="Order" class="btn btn-buy text-white">Buy</button>
+                            <button asp-action="Cart" asp-controller="Cart" class="btn btn-buy text-white">Add To Cart</button>
                         </div>
                     </div>
                     <div class="product-details">
@@ -300,7 +300,7 @@
         <div class="row">
             @foreach (var product in ViewBag.relatedProducts)
             {
-                <partial name="_ProductPartialView" model="product" view-data='new ViewDataDictionary(ViewData) { { "ColumnClass", "col-lg-3 col-md-6 col-sm-6" } }' />
+                <partial name="_ProductPartialView" model="product" view-data='new ViewDataDictionary(ViewData) { { "ColumnClass", "col-lg-2 col-md-4 col-sm-6" } }' />
             }
         </div>
     </div>
