--- a/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
+++ b/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
@@ -33,13 +33,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-controller="User" asp-action="Index">Home</a>
+                            <a class="nav-link text-white" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-controller="#" asp-action="Index">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-controller="User" asp-action="Products">Products</a>
+                            <a class="nav-link text-white" asp-controller="Home" asp-action="Products">Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-controller="Home" asp-action="Privacy">Privacy</a>
