--- a/Task1LoginRegister/wwwroot/css/featuredProducts.css
+++ b/Task1LoginRegister/wwwroot/css/featuredProducts.css
@@ -54,6 +54,9 @@
     .product-image {
         height: 275px;
     }
+    .card-title{
+        font-size:0.9rem;
+    }
 
     .col-lg-3, .col-md-6 {
         width: 100%;
@@ -74,6 +77,9 @@
     .col-lg-3, .col-md-6 {
         width: 50%;
         margin-bottom: 20px;
+    }
+    .card-title {
+        font-size: 1rem;
     }
 
     .card {
