--- a/Task1LoginRegister/Areas/Admin/Views/Products/Create.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Products/Create.cshtml
@@ -31,12 +31,9 @@
             </div>
 
             <div class="col-md-6">
-                <label asp-for="Status" class="form-label">Status</label>
-                <select asp-for="Status" class="form-select">
-                    <option value="true">Active</option>
-                    <option value="false">Inactive</option>
-                </select>
-                <span asp-validation-for="Status" class="text-danger"></span>
+                <label asp-for="DeliveryCharge" class="form-label">Delivery Charge</label>
+                <input asp-for="DeliveryCharge" type="number" class="form-control" />
+                <span asp-validation-for="DeliveryCharge" class="text-danger"></span>
             </div>
         </div>
 
@@ -86,6 +83,15 @@
                 </select>
                 <span asp-validation-for="SubcategoryId" class="text-danger"></span>
             </div>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Status" class="form-label">Status</label>
+            <select asp-for="Status" class="form-select">
+                <option value="true">Active</option>
+                <option value="false">Inactive</option>
+            </select>
+            <span asp-validation-for="Status" class="text-danger"></span>
         </div>
 
         <div class="d-flex justify-content-center">
