--- a/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                                 <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Hello, @Context.Session.GetString("UserSession")</a>
                             </li>
                             <li class="nav-item">
-                                <form asp-controller="Login" asp-action="Logout" method="post" >
+                                <form asp-controller="Login" asp-area="" asp-action="Logout" method="post" >
                                     <button type="submit" class="btn btn-link text-white nav-link ">Logout</button>
                                 </form>
                             </li>
