--- a/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
+++ b/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
@@ -54,6 +54,7 @@
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="SignUp">SignUp</a>
                             </li>
+                     
                         }
                         else
                         {
@@ -66,8 +67,23 @@
                                     <button type="submit" class="btn btn-link text-white nav-link ">Logout</button>
                                 </form>
                             </li>
-
+                           
                         }
+                        <li class="nav-item position-relative">
+                            <a class="nav-link text-white d-flex align-items-center" asp-action="Index" asp-controller="Cart" title="Cart">
+                                @if (!string.IsNullOrEmpty(ViewBag.CartItemCount))
+                                {
+                                    <span id="cart-count" class="badge bg-danger rounded-circle position-absolute translate-middle" style="margin-left:25px; margin-top:8px;padding-left:5px;padding-right:5px;">
+                                        @ViewBag.CartItemCount
+                                    </span>
+                                }
+                                <img src="https://img.icons8.com/?size=100&id=9671&format=png&color=FFFFFF"
+                                     alt="Cart" class="ms-2" width="24" height="24">
+                                <span class="ms-1">Cart</span>
+                            </a>
+                        </li>
+
+
                     </ul>
                 </div>
             </div>
