--- a/Task1LoginRegister/Areas/Admin/Views/Products/Index.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Products/Index.cshtml
@@ -22,8 +22,6 @@
                 <th>Image</th>
                 <th>@Html.DisplayNameFor(model => model.Name)</th>
                 <th>@Html.DisplayNameFor(model => model.SKU)</th>
-                <th>@Html.DisplayNameFor(model => model.Price)</th>
-                <th width="6%">@Html.DisplayNameFor(model => model.SellingPricePercent)</th>
                 <th>@Html.DisplayNameFor(model => model.CalculatedSellingPrice)</th>
                 <th>@Html.DisplayNameFor(model => model.Category)</th>
                 <th>@Html.DisplayNameFor(model => model.Subcategory)</th>
@@ -75,9 +73,7 @@
                    
                     <td>@Html.DisplayFor(modelItem => item.Name)</td>
                     <td>@Html.DisplayFor(modelItem => item.SKU)</td>
-                    <td>@item.Price.ToString("C")</td>
-                    <td width="6%">@item.SellingPricePercent.ToString("0.##") %</td>
-                    <td>@item.CalculatedSellingPrice.ToString("C")</td>
+                    <td class="border p-2">@item.Price.ToString("C")</td>
                     <td>@Html.DisplayFor(modelItem => item.Category.Name)</td>
                     <td>@Html.DisplayFor(modelItem => item.Subcategory.Name)</td>
 
@@ -114,15 +110,17 @@
 @section Scripts {
    
     <script>
-        $(document).ready(function () {
+         $(document).ready(function () {
             $("#productsTable").DataTable({
                 responsive: true,
-                autoWidth: true,
-                scrollX: true,
+                paging: true,
+                searching: true,
+                lengthChange: false,
+                info: false
             });
         });
 
-        $(document).on("click", ".btn", function () {
+        $(document).on("click", ".toggle-status", function () {
             var button = $(this);
             var ProductId = button.data("id");
 
