--- a/Task1LoginRegister/Views/Cart/Index.cshtml
+++ b/Task1LoginRegister/Views/Cart/Index.cshtml
@@ -261,11 +261,18 @@
                         }
                         else
                         {
-                            <p>Delivery Charges: <strong>Free</strong> </p>
+                            <p>Delivery Charges: <strong class="float-end text-success fw-bold">Free</strong> </p>
                         }
                     }
+
+                    <hr />
+                    <p class="fw-bold">Tax</p>
+                  <hr />
+                    <p>CGST: <span class="float-end">@Model.Sum(x => x.TotalGST > 0 ? x.TotalGST / 2 : 0).ToString("C")</span></p>
+                    <p>SGST: <span class="float-end">@Model.Sum(x => x.TotalGST > 0 ? x.TotalGST / 2 : 0).ToString("C")</span></p>
+
                     <hr>
-                    <h5 class="fw-bold">Total Amount: <span class="float-end">@Model.Sum(x => x.Quantity * x.Product.Price + x.Product.DeliveryCharge).ToString("C")</span></h5>
+                    <h5 class="fw-bold">Total Amount: <span class="float-end">@Model.Sum(x => x.Quantity * x.Product.Price + x.Product.DeliveryCharge + x.TotalGST).ToString("C")</span></h5>
                     <p class="text-success">You will save @Model.Sum(x => x.Quantity * (x.Product.Price - x.Product.CalculatedSellingPrice)).ToString("C") on this order</p>
                     <button class="btn btn-warning w-100 mt-2">Place Order</button>
 
