--- a/Task1LoginRegister/Areas/Admin/Views/Home/Index.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="table-responsive">
         <table class="table" id="userTable">
-            <thead>
+            <thead class="thead-dark bg-black text-white">
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.FirstName)</th>
                     <th>@Html.DisplayNameFor(model => model.LastName)</th>
