--- a/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject Task1LoginRegister.Services.UserService UserService
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -37,20 +38,20 @@
                         @if (Context.Session.GetString("UserSession") == null && !User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Login">Login</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="SignUp">SignUp</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="SignUp">SignUp</a>
                             </li>
                         }
                         else
                         {
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Hello, @Context.Session.GetString("UserSession")</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">@UserService.GetUserName()</a>
                             </li>
                             <li class="nav-item">
-                                <form asp-controller="Login" asp-area="" asp-action="Logout" method="post" >
+                                <form asp-controller="Account" asp-area="" asp-action="Logout" method="post">
                                     <button type="submit" class="btn btn-link text-white nav-link ">Logout</button>
                                 </form>
                             </li>
