#Change LoginController name to AccountController

--- a/Task1LoginRegister/Views/Account/SignUp.cshtml
+++ b/Task1LoginRegister/Views/Account/SignUp.cshtml
@@ -76,7 +76,7 @@
                 <div class="card-footer text-center py-3">
                     <p class="mb-0">
                         Already Registered?
-                        <a asp-action="Login" asp-controller="Login" class="text-decoration-none text-primary fw-bold">Click here to Login.</a>
+                        <a asp-action="Login" asp-controller="Account" class="text-decoration-none text-primary fw-bold">Click here to Login.</a>
                     </p>
                 </div>
             </div>
