--- a/Task1LoginRegister/Views/Account/Login.cshtml
+++ b/Task1LoginRegister/Views/Account/Login.cshtml
@@ -40,7 +40,7 @@
                 <div class="card-footer text-center py-3">
                     <p class="mb-0">
                         New User? 
-                        <a asp-action="SignUp" asp-controller="Login" class="text-decoration-none text-primary fw-bold">Click here to register.</a>
+                        <a asp-action="SignUp" asp-controller="Account" class="text-decoration-none text-primary fw-bold">Click here to register.</a>
                     </p>
                 </div>
             </div>
