--- a/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
+++ b/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject Task1LoginRegister.Services.UserService UserService
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -49,21 +50,33 @@
                         @if (!User.Identity.IsAuthenticated && Context.Session.GetString("UserSession") == null)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Login">Login</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="SignUp">SignUp</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="SignUp">SignUp</a>
                             </li>
                      
                         }
                         else
                         {
-                            <li class="nav-item">
+                            var userEmail = User.Identity.Name ?? Context.Session.GetString("UserSession");
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Hello, @Context.Session.GetString("UserSession")</a>
+                            <li class="nav-item">
+                                <div class="btn-group">
+                                    <a type="button" class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                       @UserService.GetUserName()
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" asp-action="Profile">My Profile</a></li>
+                                        <li><a class="dropdown-item" asp-action="UserOrders" asp-controller="Order">Orders</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        <li><hr class="dropdown-divider"></li>
+                                        <li><a class="dropdown-item" href="#">Separated link</a></li>
+                                    </ul>
+                                </div>
                             </li>
                             <li class="nav-item">
-                                <form asp-controller="Login" asp-action="Logout" method="post">
+                                <form asp-controller="Account" asp-action="Logout" method="post">
                                     <button type="submit" class="btn btn-link text-white nav-link ">Logout</button>
                                 </form>
                             </li>
