#Added  Order management pages on admin side and display list of orders on user side

--- a/Task1LoginRegister/Areas/Admin/Views/AdminOrders/Index.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/AdminOrders/Index.cshtml
@@ -18,7 +18,7 @@
                         <tr>
                             <th>Order #</th>
                             <th>Customer</th>
-                            <th>Dateth</th>
+                            <th>Date</th>
                             <th>Amount</th>
                             <th>Payment Method</th>
                             <th>Payment Status</th>
@@ -100,8 +100,6 @@
     <script>
         $(document).ready(function () {
             $("#orderTable").DataTable({
-                responsive: true,
-
             });
         });
     </script>
