--- a/Task1LoginRegister/Views/Account/UserOrders.cshtml
+++ b/Task1LoginRegister/Views/Account/UserOrders.cshtml
@@ -81,7 +81,7 @@
                                         }
                                     }
                                     <div>
-                                        <p class="mb-1"><strong>@item.Product.Name</strong></p>
+                                        <p class="mb-1"><strong><a asp-action="Details" asp-controller="Home" asp-route-id="@item.ProductId" class="text-decoration-none text-black">@item.Product.Name</a></strong></p>
                                         <p class="mb-0">Price: ₹@item.Product.CalculatedSellingPrice | Qty: @item.Quantity</p>
                                     </div>
                                 </div>
