--- a/Task1LoginRegister/Views/Shared/_OrderItemsTable.cshtml
+++ b/Task1LoginRegister/Views/Shared/_OrderItemsTable.cshtml
@@ -23,6 +23,8 @@
             <div class="col-md-6">
                 <h5>Order Summary</h5>
                 <hr />
+                <p><strong>Order Number:</strong> @Model.OrderNumber</p>
+
                 <p><strong>Order Date:</strong> @Model.OrderDate.ToString("MMM dd, yyyy")</p>
                 <p><strong>Payment Method:</strong> @Model.PaymentMethod</p>
 
@@ -71,7 +73,7 @@
                             <td class="text-success">-@discount</td>
                             <td>@cgst.ToString("N2")</td>
                             <td>@sgst.ToString("N2")</td>
-                            <td>@(item.Product.DeliveryCharge > 0 ? item.Product.DeliveryCharge.ToString("N2") : "Free")</td>
+                            <td>@(item.Product.DeliveryCharge > 0 ? item.Product.DeliveryCharge.ToString("N2") : "0.00")</td>
                             <td class="text-end">@itemTotal.ToString("N2")</td>
                         </tr>
                     }
